# antra-uzduotis

./: Gintis.hi  Gintis.hs  Main.hi  Main.hs  antraUzduotis.cabal
